--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,6 +1,8 @@
 html,
 body {
   height: 100%;
+  font-family: 'Fira Sans', sans-serif;
+  font-size: 14px;
 }
 
 .wrapper {
@@ -17,7 +19,9 @@ body {
   flex: 0 0 auto;
 }
 
-
+a{
+  color: inherit;
+}
 
 
 
