--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -10,27 +10,110 @@
 }
 
 
-.header{
-  &__inner{
+.header {
+  background-color: #3C322D;
+
+  &__inner {
     display: flex;
     height: 120px;
     margin: auto 0;
+    color: white;
   }
 }
-.logo{
+
+.logo {
   display: flex;
   margin: auto 0;
-  &-title{
+
+  &-title {
     text-transform: uppercase;
     margin: auto 0;
     padding-left: 17px;
+    font-weight: 700;
+    font-size: 17px;
   }
 }
-.main-nav{
+
+.main-nav {
   padding-left: 70px;
   margin: auto 0;
-  &__list{
+  font-size: 15px;
+  font-weight: 400;
+
+  &__list {
     display: flex;
-flex-direction: row;
+    flex-direction: row;
+
+    &-item {
+      padding: 15px;
+    }
   }
+}
+
+.address {
+  margin: auto 0;
+  display: flex;
+  padding-left: 30px;
+  width: 130px;
+
+  &__text {
+    padding-top: 10px;
+  }
+
+  &__img {
+    width: 36px;
+    height: 36px;
+    margin-top: 8px;
+  }
+}
+
+.phone {
+  margin: auto 0;
+  display: flex;
+  padding-left: 100px;
+  padding-top: 10px;
+
+  &__img {
+    width: 36px;
+    height: 36px;
+  }
+
+  &-text {
+    padding-right: 20px;
+    font-size: 18px;
+
+    &-work {
+      font-size: 14px;
+    }
+  }
+}
+
+.main {
+  margin-bottom: 100px;
+  background-color: #3C322D;
+  &__text {
+    background: no-repeat center/100% url("../images/main-bg.png") ;
+    padding-bottom: 58px;
+    &-title{
+      font-size: 70px;
+      font-weight: 900;
+      font-family: 'Playfair Display', sans-serif;
+      padding: 40px 0 0 60px;
+      width: 650px;
+      color: white;
+      line-height: 90%;
+      margin-bottom: 645px;
+    }
+  }
+}
+.book{
+  padding: 18px 51px;
+  font-size: 20px;
+  font-family: 'Playfair Display', sans-serif;
+  font-weight: 700;
+  background: #FF6E40;
+  color: white;
+  border: none;
+  margin-left: 62px;
+
 }
